Organisation user copy changes

--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -77,7 +77,7 @@
               -if current_user
                 .row
                   If you think you can help, then click 'Maybe I can help' to send a private offer and a message to
-                  ="#{@need.user}. Alternatively, click 'Chat to #{@need.user} to chat privately about this need."
+                  ="#{@need.user}. Alternatively, click 'Chat to #{@need.user}' to chat privately about this need."
                 .row.mt-2                
                   -if current_user.try(:validated?)
                     =link_to "Maybe I can help", "#offer-form", :'data-toggle' => "modal",  :class => "btn btn-primary mb-2"
