--- a/app/views/general_offers/show.html.haml
+++ b/app/views/general_offers/show.html.haml
@@ -9,7 +9,7 @@
     .span12
       .alert.alert-error
         -if @general_offer.user.is_organisation_admin?
-          ="#{organisation.name}'s neighbours will be able to see this offer once #{first_name_or_your(@general_offer.user)} address has been validated."
+          ="#{@general_offer.user == current_user ? 'Your' : @general_offer.user.organisation.name + "'s"} neighbours will be able to see this offer once #{@general_offer.user == current_user ? 'your' : @general_offer.user.organisation.name + "'s"} address has been validated."
         -else
           ="#{first_name_or_your(@general_offer.user).capitalize} neighbours will be able to see this offer once #{first_name_or_your(@general_offer.user)} address has been validated."
 .row.mt-2
@@ -42,14 +42,14 @@
             -if !current_user
               .row
                 If you want to accept this offer, then click 'Accept this offer' to accept and send a private message to
-                ="#{@general_offer.user}. Alternatively, click 'Chat to #{@general_offer.user} to chat privately about this offer."
+                ="#{@general_offer.user}. Alternatively, click 'Chat to #{@general_offer.user}' to chat privately about this offer."
               .row.mt-2
                 =link_to("Accept #{@general_offer.user}'s offer", sign_in_path(:next => general_offer_path(@general_offer)), :class => 'btn btn-primary')
                 =link_to "Chat to #{@general_offer.user}", sign_in_path(:next => general_offer_path(@general_offer, :context => "chat")), :class => "btn btn-primary mb-2"
             -elsif current_user.validated?
               .row
                 If you want to accept this offer, then click 'Accept this offer' to accept and send a private message to
-                ="#{@general_offer.user}. Alternatively, click 'Chat to #{@general_offer.user} to chat privately about this offer."
+                ="#{@general_offer.user}. Alternatively, click 'Chat to #{@general_offer.user}' to chat privately about this offer."
               .row.mt-2
                 =link_to("Accept #{@general_offer.user}'s offer", accept_general_offer_path(@general_offer), :method => :post, :class => 'btn btn-primary') unless current_user == @general_offer.user
                 =link_to "Chat to #{@general_offer.user}", general_offer_path(@general_offer, :context => "chat"), :class => "btn btn-primary"
