--- a/app/views/users/_table.html.haml
+++ b/app/views/users/_table.html.haml
@@ -47,7 +47,7 @@
                   =link_to "Mark sent", send_activation_code_user_path(user), :method => :put
               -else
                 \-
-          %td=link_to "View actions", "##{tab}-user-#{user.id}", :'data-toggle'=>"modal"
+          %td=link_to "View actions", "##{tab}-user-#{user.id}", :'data-toggle'=>"modal" unless user == current_user
 
           .modal.hide.fade{:id => "#{tab}-user-#{user.id}"}
             .modal-body
