--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -117,7 +117,7 @@
         =link_to("#inappropriate", :data => {:toggle => "modal"}) do
           %i.icon-warning-sign
           Report this page as inappropriate
-      -if !@need.removed? && can?(:destroy, @need)
+      -if !@need.removed? && can?(:remove, @need)
         .clearfix
         -if current_user.try(:validated?)
           =link_to("Remove this request", remove_need_path(@need), :confirm => "Are you sure?", :class => "btn btn-danger mt-2")
