--- a/app/views/needs/_post.html.haml
+++ b/app/views/needs/_post.html.haml
@@ -37,5 +37,5 @@
     .comments
       .comment-list
         =render(:partial => "comments/comment", :collection => post.comments)
-      -if logged_in_as?(@need.user, @offers.collect(&:user), @need.posts.collect(&:user)) && current_user.validated?
+      -if logged_in_as?(@need.user, @offers.collect(&:user), @need.posts.collect(&:user)) && current_user.validated? && !@need.removed?
         =render("comments/form", :comment => post.comments.build)
