--- a/app/views/pre_registrations/create.js.erb
+++ b/app/views/pre_registrations/create.js.erb
@@ -1,4 +1,4 @@
-<%if @pre_register_user.pre_registered_organisation?%>
+<%if @pre_register_user.pre_registered_organisation? && @pre_register_user.valid?%>
   window.location.replace('<%=root_url.chop + @next_url%>');
 <%else%>
   $('#pre-register').html('<%=escape_javascript(render("pre_registrations/modal_form"))%>');
